update: linking some pages

--- a/pages/services.html
+++ b/pages/services.html
@@ -176,12 +176,12 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development">Networking design<br>
+                                <h2 class="services-three__title"><a href="CyberSecurity">Networking design<br>
                          Infrastructure (Naas)   
           </a></h2>
                                 <p class="services-three__text">Networking Design Infrastructure as a Service (NDIaaS) is a cloud computing service model that 
                                     provides organizations with a complete networking infrastructure that is accessible over the internet. </p>
-                                <a class="services-three__arrow" href="website-development"><span
+                                <a class="services-three__arrow" href="CyberSecurity"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -199,11 +199,11 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development">Cloud  <br>design
+                                <h2 class="services-three__title"><a href="CyberSecurity">Cloud  <br>design
                                Infrastructure (Paas)</a></h2>
                                 <p class="services-three__text">Cloud networking offers connectivity to and between applications and workloads across clouds,
                                      on-premises data centers, and edge networks. It's vital to performance, security, and efficient management of hybrid cloud </p>
-                                <a class="services-three__arrow" href="website-development"><span
+                                <a class="services-three__arrow" href="CyberSecurity"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -221,10 +221,10 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development">Business & <br>
+                                <h2 class="services-three__title"><a href="social-marketing">Business & <br>
                                         Home Wi-Fi</a></h2>
                                 <p class="services-three__text">We install, monitor and support your WiFi network. Never worry about large capital expenditures, broken or out-dated equipment, or having your front desk support WiFi. </p>
-                                <a class="services-three__arrow" href="website-development"><span
+                                <a class="services-three__arrow" href="social-marketing"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -287,11 +287,11 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development">CyberSecurity
+                                <h2 class="services-three__title"><a href="CyberSecurity">CyberSecurity
                                         <br>Case study</a></h2>
                                 <p class="services-three__text">Data is one of the most valuable assets for any business. Cybersecurity measures, such as firewalls,
 								encryption, and access controls, help protect your data from unauthorized access, theft, or manipulation..</p>
-                                <a class="services-three__arrow" href="website-development"><span
+                                <a class="services-three__arrow" href="CyberSecurity"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -334,7 +334,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <div class="site-footer__top-logo">
-                                <a href="index"><img src="../assets/images/resources/footer-logo.png" alt=""></a>
+                                <a href="../index"><img src="../assets/images/resources/footer-logo.png" alt=""></a>
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
