--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
                                         <span class="icon-online-shopping"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="website-development">Networking Cabling <br>
+                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Networking Cabling <br>
                                             Infrastructure
                                             design</a></h3>
-                                    <a class="services-one__arrow" href="website-development"><span
+                                    <a class="services-one__arrow" href="/pages/CyberSecurity"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="200ms">
@@ -292,9 +292,9 @@
                                         <span class="icon-growth"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="graphic-design">Internet Access<br> WiFi
+                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Internet Access<br> WiFi
                                             design</a></h3>
-                                    <a class="services-one__arrow" href="graphic-design"><span
+                                    <a class="services-one__arrow" href="/pages/CyberSecurity"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="300ms">
@@ -302,9 +302,9 @@
                                         <span class="icon-webpage"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="digital-marketing">Website development & <br>
+                                    <h3 class="services-one__title"><a href="/pages/website-development">Website development & <br>
                                             Digital marketing</a></h3>
-                                    <a class="services-one__arrow" href="digital-marketing"><span
+                                    <a class="services-one__arrow" href="/pages/website-development"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="400ms">
@@ -312,9 +312,9 @@
                                         <span class="icon-front-end"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="social-marketing">Cybersecurity <br>
+                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Cybersecurity <br>
                                             business growth</a></h3>
-                                    <a class="services-one__arrow" href="social-marketing"><span
+                                    <a class="services-one__arrow" href="/pages/CyberSecurity"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                             </ul>
