--- a/pages/about.html
+++ b/pages/about.html
@@ -151,7 +151,7 @@
             <div class="container">
                 <div class="page-header__inner">
                     <ul class="thm-breadcrumb list-unstyled">
-                        <li><a href="index">Home</a></li>
+                        <li><a href="../index">Home</a></li>
                         <li class="active">pages</li>
                     </ul>
                     <h2>about us</h2>
