sent_whatsapp_btn_to_left

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -650,6 +650,7 @@
 
     <!-- template js -->
     <script src="../assets/js/qutiiz.js"></script>
+    <script src="../assets/js/whatsapp.js"></script>
 </body>
 
 </html>
