Update: on links and removing the blog content.

--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
                                         <span class="icon-online-shopping"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Networking Cabling <br>
+                                    <h3 class="services-one__title"><a href="/pages/digital-marketing">Networking Cabling &<br>
                                             Infrastructure
                                             design</a></h3>
-                                    <a class="services-one__arrow" href="/pages/CyberSecurity"><span
+                                    <a class="services-one__arrow" href="/pages/digital-marketing"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="200ms">
@@ -292,9 +292,9 @@
                                         <span class="icon-growth"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Internet Access<br> WiFi
+                                    <h3 class="services-one__title"><a href="/pages/mobile-applications">Internet of Things (IOTs)<br> & WiFi
                                             design</a></h3>
-                                    <a class="services-one__arrow" href="/pages/CyberSecurity"><span
+                                    <a class="services-one__arrow" href="/pages/mobile-applications"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="300ms">
@@ -312,7 +312,7 @@
                                         <span class="icon-front-end"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Cybersecurity <br>
+                                    <h3 class="services-one__title"><a href="/pages/CyberSecurity">Cybersecurity &<br>
                                             business growth</a></h3>
                                     <a class="services-one__arrow" href="/pages/CyberSecurity"><span
                                             class="icon-right-arrow"></span></a>
@@ -342,13 +342,6 @@
                             data-wow-duration="2500ms">
                             <div class="get-to-know__img">
                                 <img src="assets/images/resources/get-to-know-img.jpg" alt="">
-                                <div class="get-to-know__video-link">
-                                    <a href="https://www.youtube.com/watch?v=Get7rqXYrbQ" class="video-popup">
-                                        <div class="get-to-know__video-icon">
-                                            <span class="icon-play-button"></span>
-                                        </div>
-                                    </a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -1208,123 +1201,16 @@
                 </div>
                 <div class="financial-advice__bottom">
                     <p class="financial-advice__bottom-text">IPness services built specifically for your business. <a
-                            href="about">Find Your Solution</a></p>
+                            href="/pages/services">Find Your Solution</a></p>
                 </div>
             </div>
         </section>
         <!--Financial Advice End-->
 
-        <!--Blog One Start-->
-        <section class="blog-one">
-            <div class="container">
-                <div class="section-title text-center">
-                    <span class="section-title__tagline">our blog posts</span>
-                    <h2 class="section-title__title">News & Articles</h2>
-                </div>
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="100ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="assets/images/blog/blog-one-img-1.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="pages/blog-details">Get few solutions to hire a best candidate</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Prince Sam</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="200ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="assets/images/blog/blog-one-img-2.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="pages/blog-details">Bring to the table win-win survival strategies</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Prince Sam</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="300ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="assets/images/blog/blog-one-img-3.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="pages/blog-details">Capitalize on low hanging fruit to identify a</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Prince Sam</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--Blog One End-->
+         
 
         <!--CTA One Start-->
-        <section class="cta-one">
+        <section class="cta-one>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
@@ -1336,7 +1222,7 @@
                                 <h2 class="cta-one__title">the passion we use to handle every single<br> project is Remarkable</h2>
                             </div>
                             <div class="cta-one__right">
-                                <a href="contact" class="cta-one__btn thm-btn">let’s get started</a>
+                                <a href="/pages/contact" class="cta-one__btn thm-btn">let’s get started</a>
                             </div>
                         </div>
                     </div>
