--- a/pages/blog.html
+++ b/pages/blog.html
@@ -163,206 +163,7 @@
         <!--Blog Page Start-->
         <section class="blog-one blog-one__blog-page">
             <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="100ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="../assets/images/blog/blog-page-img-1.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details">Get few solutions to hire a best candidate</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="../assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="../assets/images/blog/blog-page-img-2.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details">Bring to the table win-win survival strategies</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="../assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="../assets/images/blog/blog-page-img-3.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details">Capitalize on low hanging fruit to identify a</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="../assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="400ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="../assets/images/blog/blog-page-img-4.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details">Close the loop on focusing solely on </a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="../assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="500ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="../assets/images/blog/blog-page-img-5.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details">Organically grow the holistic world view of
-                                    </a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="../assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="600ms">
-                        <!--Blog One Start-->
-                        <div class="blog-one__single">
-                            <div class="blog-one__img">
-                                <img src="../assets/images/blog/blog-page-img-6.jpg" alt="">
-                                <a href="blog-details">
-                                    <span class="blog-one__plus"></span>
-                                </a>
-                                <div class="blog-one__date">
-                                    <p>25 <br> AUG</p>
-                                </div>
-                            </div>
-                            <div class="blog-one__content">
-                                <ul class="list-unstyled blog-one__meta">
-                                    <li><a href="blog-details"><i class="far fa-folder-open"></i> Business</a></li>
-                                    <li><a href="blog-details"><i class="far fa-comments"></i> 02 Comments</a>
-                                    </li>
-                                </ul>
-                                <h3 class="blog-one__title">
-                                    <a href="blog-details">Leverage agile frameworks to provide a robust</a>
-                                </h3>
-                                <div class="blog-one__person">
-                                    <div class="blog-one__person-img">
-                                        <img src="../assets/images/blog/blog-one-person-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="blog-sidebar__load-more text-center">
-                        <a href="blog" class="thm-btn blog-sidebar__load-more-btn">load more
-                            posts</a>
-                    </div>
-                </div>
+                <h1 class="text-coming-soon-content">COMING SOON!!!</h1> 
             </div>
         </section>
         <!--Blog Page End-->
