update: correction on page linking

--- a/pages/CyberSecurity.html
+++ b/pages/CyberSecurity.html
@@ -180,7 +180,7 @@
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="social-marketing">Social Marketings <span
 												class="icon-right-arrow"></span></a></li>
-									<li><a href="content-writing">CyberSecurity <span
+									<li><a href="CyberSecurity">CyberSecurity <span
 												class="icon-right-arrow"></span></a></li>
 								</ul>
 							</div>
