--- a/pages/social-marketing.html
+++ b/pages/social-marketing.html
@@ -191,7 +191,7 @@
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="social-marketing">Social Marketings <span
 												class="icon-right-arrow"></span></a></li>
-									<li><a href="cyberSecurity">CyberSecurity <span
+									<li><a href="CyberSecurity">CyberSecurity <span
 												class="icon-right-arrow"></span></a></li>
 								</ul>
 							</div>
