Update: removing the dropdown from the home page in the mobile view.

--- a/pages/CyberSecurity.html
+++ b/pages/CyberSecurity.html
@@ -70,7 +70,7 @@
 							<a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
 							<ul class="main-menu__list">
 
-								<li class="dropdown megamenu">
+								<li class="megamenu">
 									<a href="../index">Home </a>
 									 
 								</li>
