--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+1 689 267 3697"></a>
+                    <a href="tel:+1 689 267 3697">+1 689 267 3697</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
