--- a/pages/about.html
+++ b/pages/about.html
@@ -858,7 +858,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+1 689 267 3697">+1 689 267 3697 </p>/+233 59 215 6776</a>
+                    <a href="tel:+1 689 267 3697">+1 689 267 3697</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
