update: rename files

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <div class="main-menu-wrapper clearfix">
                     <div class="main-menu-wrapper__left">
                         <div class="main-menu-wrapper__logo">
-                            <a href="index"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                            <a href="/"><img src="assets/images/resources/logo-1.png" alt=""></a>
                         </div>
                         <div class="main-menu-wrapper__main-menu">
                             <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                             <ul class="main-menu__list">
 
                                 <li class="megamenu">
-                                    <a href="index">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
 
 
@@ -90,8 +90,8 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         <li><a href="pages/services">Services</a></li>
-                                        <li><a href="pages/mobile-applications">IoTs</a></li>
-                                        <li><a href="pages/digital-marketing">Networking & Cloud Infrastructure</a></li>
+                                        <li><a href="pages/iots">IoTs</a></li>
+                                        <li><a href="pages/Networking">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="pages/graphic-design">Graphic Designing</a></li>
                                         <li><a href="pages/website-development">Website Developments</a></li>
                                         <li><a href="pages/social-marketing">Social Marketings</a></li>
@@ -281,10 +281,10 @@
                                         <span class="icon-online-shopping"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="/pages/digital-marketing">Networking Cabling &<br>
+                                    <h3 class="services-one__title"><a href="/pages/Networking">Networking Cabling &<br>
                                             Infrastructure
                                             design</a></h3>
-                                    <a class="services-one__arrow" href="/pages/digital-marketing"><span
+                                    <a class="services-one__arrow" href="/pages/Networking"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="200ms">
@@ -292,9 +292,9 @@
                                         <span class="icon-growth"></span>
                                     </div>
                                     <div class="services-one__count"></div>
-                                    <h3 class="services-one__title"><a href="/pages/mobile-applications">Internet of Things (IOTs)<br> & WiFi
+                                    <h3 class="services-one__title"><a href="/pages/iots">Internet of Things (IOTs)<br> & WiFi
                                             design</a></h3>
-                                    <a class="services-one__arrow" href="/pages/mobile-applications"><span
+                                    <a class="services-one__arrow" href="/pages/iots"><span
                                             class="icon-right-arrow"></span></a>
                                 </li>
                                 <li class="services-one__single wow fadeInUp" data-wow-delay="300ms">
