--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,8 +92,8 @@
                                     <ul>
                                         
                                         <li><a href="services">Services</a></li>
-                                        <li><a href="mobile-applications">IoTs </a></li>
-                                        <li><a href="digital-marketing">Digital Marketings </a></li>
+                                        <li><a href="iots">IoTs </a></li>
+                                        <li><a href="Networking">Digital Marketings </a></li>
                                         <li><a href="graphic-design">Graphic Designing </a></li>
                                         <li><a href="website-development">Website Developments </a></li>
                                         <li><a href="social-marketing">Social Marketings </a></li>
