--- a/pages/iots.html
+++ b/pages/iots.html
@@ -93,8 +93,8 @@
 									<ul>
 										 
 										<li><a href="services">Services</a></li>
-										<li><a href="mobile-applications">IoTs</a></li>
-										<li><a href="digital-marketing">Networking & Cloud Infrastructure</a></li>
+										<li><a href="iots">IoTs</a></li>
+										<li><a href="Networking">Networking & Cloud Infrastructure</a></li>
 										<li><a href="graphic-design">Graphic Designing </a></li>
 										<li><a href="website-development">Website Developments </a></li>
 										<li><a href="social-marketing">Social Marketings </a></li>
@@ -172,9 +172,9 @@
 						<div class="service-details__sidebar">
 							<div class="service-details__sidebar-service">
 								<ul class="service-details__sidebar-service-list list-unstyled">
-									<li><a href="mobile-applications">IoTs<span
+									<li><a href="iots">IoTs<span
 												class="icon-right-arrow"></span></a></li>
-									<li><a href="digital-marketing">Networking & Cloud Infrastructure<span
+									<li><a href="Networking">Networking & Cloud Infrastructure<span
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="graphic-design">Graphic Designings <span
 												class="icon-right-arrow"></span></a></li>
