--- a/pages/about.html
+++ b/pages/about.html
@@ -91,8 +91,8 @@
                                     <a href="services">Services</a>
                                     <ul>
                                         
-                                        <li><a href="mobile-applications">IoTs</a></li>
-                                        <li><a href="digital-marketing">Networking & Cloud Infrastructure </a></li>
+                                        <li><a href="iots">IoTs</a></li>
+                                        <li><a href="Networking">Networking & Cloud Infrastructure </a></li>
                                         <li><a href="graphic-design">Graphic Designings </a></li>
                                         <li><a href="website-development">Website Developments </a></li>
                                         <li><a href="social-marketing">Social Marketings </a></li>
