--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -93,8 +93,8 @@
                                     <ul>
                                         
                                         <li><a href="services">Services</a></li>
-                                        <li><a href="mobile-applications">Mobile Applications </a></li>
-                                        <li><a href="digital-marketing">Digital Marketings </a></li>
+                                        <li><a href="iots">Mobile Applications </a></li>
+                                        <li><a href="Networking">Digital Marketings </a></li>
                                         <li><a href="graphic-design">Graphic Designings </a></li>
                                         <li><a href="website-development">Website Developments </a></li>
                                         <li><a href="social-marketing">Social Marketings </a></li>
