--- a/pages/why-choose.html
+++ b/pages/why-choose.html
@@ -92,8 +92,8 @@
                                     <ul>
                                         
                                         <li><a href="services">Services</a></li>
-                                        <li><a href="mobile-applications">IoTs</a></li>
-                                        <li><a href="digital-marketing">Networking & Cloud Infrastructure		</a></li>
+                                        <li><a href="iots">IoTs</a></li>
+                                        <li><a href="Networking">Networking & Cloud Infrastructure		</a></li>
                                         <li><a href="graphic-design">Graphic Designing </a></li>
                                         <li><a href="website-development">Website Developments </a></li>
                                         <li><a href="social-marketing">Social Marketings </a></li>
