--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                 <img src="assets/images/resources/project-one-img-1.jpg" alt="">
                                 <div class="project-one__hover project-one__hover-pl-40">
                                     <p class="project-one__tagline">Businesses</p>
-                                    <h3 class="project-one__title"><a href="project-details">Digital Marketing</a>
+                                    <h3 class="project-one__title"><a href="#">Digital Marketing</a>
                                     </h3>
                                 </div>
                             </div>
@@ -487,7 +487,7 @@
                                 <img src="assets/images/resources/project-one-img-2.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Street</p>
-                                    <h3 class="project-one__title"><a href="project-details">Public Hotspot</a>
+                                    <h3 class="project-one__title"><a href="#">Public Hotspot</a>
                                     </h3>
                                 </div>
                             </div>
@@ -500,7 +500,7 @@
                                 <img src="assets/images/resources/project-one-img-3.jpg" alt="">
                                 <div class="project-one__hover project-one__hover-pl-40">
                                     <p class="project-one__tagline">Organizations</p>
-                                    <h3 class="project-one__title"><a href="project-details">CyberSecurity</a>
+                                    <h3 class="project-one__title"><a href="#">CyberSecurity</a>
                                     </h3>
                                 </div>
                             </div>
@@ -513,7 +513,7 @@
                                 <img src="assets/images/resources/project-one-img-4.jpg" alt="" width="270px" height="370px">
                                 <div class="project-one__hover project-one__hover-pl-40">
                                     <p class="project-one__tagline">Homes</p>
-                                    <h3 class="project-one__title"><a href="project-details">Home WiFi Distribution</a>
+                                    <h3 class="project-one__title"><a href="#">Home WiFi Distribution</a>
                                     </h3>
                                 </div>
                             </div>
@@ -526,7 +526,7 @@
                                 <img src="assets/images/resources/project-one-img-5.jpg" alt="">
                                 <div class="project-one__hover project-one__hover-pl-40">
                                     <p class="project-one__tagline">Organizations</p>
-                                    <h3 class="project-one__title"><a href="project-details">IoTs</a>
+                                    <h3 class="project-one__title"><a href="#">IoTs</a>
                                     </h3>
                                 </div>
                             </div>
@@ -539,7 +539,7 @@
                                 <img src="assets/images/resources/project-one-img-6.jpg" alt="">
                                 <div class="project-one__hover project-one__hover-pl-40">
                                     <p class="project-one__tagline">Organizations</p>
-                                    <h3 class="project-one__title"><a href="project-details">Web development</a>
+                                    <h3 class="project-one__title"><a href="#">Web development</a>
                                     </h3>
                                 </div>
                             </div>
@@ -552,7 +552,7 @@
                                 <img src="assets/images/resources/project-one-img-7.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Organizations</p>
-                                    <h3 class="project-one__title"><a href="project-details">Networking Installation</a>
+                                    <h3 class="project-one__title"><a href="#">Networking Installation</a>
                                     </h3>
                                 </div>
                             </div>
