--- a/pages/project.html
+++ b/pages/project.html
@@ -184,7 +184,7 @@
                                 <img src="../assets/images/resources/project-page-img-1.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
                                     </h3>
                                 </div>
                             </div>
@@ -197,7 +197,7 @@
                                 <img src="../assets/images/resources/project-page-img-2.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
                                     </h3>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                 <img src="../assets/images/resources/project-page-img-3.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
                                     </h3>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                                 <img src="../assets/images/resources/project-page-img-4.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
                                     </h3>
                                 </div>
                             </div>
@@ -236,7 +236,7 @@
                                 <img src="../assets/images/resources/project-page-img-5.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
                                     </h3>
                                 </div>
                             </div>
@@ -249,7 +249,7 @@
                                 <img src="../assets/images/resources/project-page-img-6.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
                                     </h3>
                                 </div>
                             </div>
