--- a/pages/team.html
+++ b/pages/team.html
@@ -218,11 +218,11 @@
                             </div>
                             <div class="team-one__content">
                                 <h4 class="team-one__name"> Appiah Kumah Miracle</h4>
-                                <p class="team-one__title">Full-satck Developer</p>
+                                <p class="team-one__title">Full-stack Developer</p>
                             </div>
                             <div class="team-one__hover">
                                 <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
-                                <p class="team-one__hover-title">Full-satck Developer</p>
+                                <p class="team-one__hover-title">Full-stack Developer</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-facebook"></i></a>
